test/files/neg/t12892/Test.scala
class C {  
  def t(b: B): B = b.m
  def u = new B {}
}
